# halogen

./: README.md  makefile  pyproject.toml
.github/workflows/: build.yml  publish.yml
halogen/: README.md  pyproject.toml
halogen/src/dynamicalsystem/halogen/: config.py
pytests/: pyproject.toml
pytests/src/dynamicalsystem/pytests/: __init__.py  environment.py  test_halogen_config.py
