[project]
name = "dynamicalsystem.halogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "halogen",
]

[tool.uv.workspace]
members = ["halogen", "pytests"]

[tool.uv.sources]
halogen = { workspace = true }
pytests = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytests",
    "ruff>=0.8.2",
    "twine>=6.0.1",
]
