[project]
name = "halogen-workspace"
version = "0.1.0"
description = "Shared library from dynamicalsystem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "halogen",
    "dynamicalsystem-pytests",
]

[tool.uv.sources]
dynamicalsystem-halogen = { workspace = true }
dynamicalsystem-pytests = { path = "pytests", editable = true }

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "dynamicalsystem-halogen>=0.1.0",
    "dynamicalsystem-pytests>=0.1.0",
]