[project]
name = "pytests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon Horrobin", email = "simon@horrobin.net" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pytests = "dynamicalsystem.pytests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamicalsystem"]
