[project]
name = "dynamicalsystem.pytests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon Horrobin", email = "simon@horrobin.net" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pytests = "dynamicalsystem.pytests:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]